packages/typ/tests/fixtures/diagnostics/0757_fcm_local_abstract_wrong_arg_10.ml.infer.expected
File "0757_fcm_local_abstract_wrong_arg_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0757_fcm_local_abstract_wrong_arg_10 is not a valid module name.

File "0757_fcm_local_abstract_wrong_arg_10.ml", line 14, characters 64-68:
14 | let _ = use_kappa (module M_kappa : Id_kappa with type t = int) true
                                                                     ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
